<resources>
    <string name="app_name">Movies time</string>
    <string name="description_poster_image">Poster image</string>
    <string name="text_genre_fighters">боевики</string>
    <string name="text_genre_dramas">драмы</string>
    <string name="text_genre_comedy">комедии</string>
    <string name="text_date_22_04_2021">22.04.2021</string>
    <string name="text_title_wrath_of_man">Гнев человеческий</string>
    <string name="text_description_wrath_of_man">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
    <string name="text_age_limit_18">18+</string>
    <string name="text_actors">Актеры</string>
    <string name="text_actor_statham">Джейсон Стэйтем</string>
    <string name="text_actor_mccallany">Холт Маккэллани</string>
    <string name="text_title_popular_now">Популярное сейчас</string>
    <string name="text_not_available_now">Not available now</string>
    <string name="profile_user_name_plug">Константин</string>
    <string name="profile_user_phone_plug">8-999-999-99-99</string>
    <string name="profile_user_mail_plug">konst.89@mail.com</string>
    <string name="avatar_photo_description">Avatar photo</string>
    <string name="profile_interests_title">Интересы</string>
    <string name="profile_user_data_title">Личные данные</string>
    <string name="edit_text_hint_name">Имя</string>
    <string name="edit_text_hint_password">Пароль</string>
    <string name="edit_text_hint_email">Почта</string>
    <string name="edit_text_hint_phone">Телефон</string>
    <string name="profile_user_settings_title">Настройки</string>
    <string name="profile_settings_notifications_and_sounds">Уведомления и звуки</string>
    <string name="profile_settings_confidentiality">Конфиденциальность</string>
    <string name="profile_settings_theme">Тема</string>
    <string name="profile_settings_language">Язык</string>
    <string name="profile_settings_data_and_memory">Данные и память</string>
    <string name="profile_user_app_title">Приложение</string>
    <string name="profile_settings_ask_question">Задать вопрос</string>
    <string name="profile_settings_report_a_problem">Сообщить о проблеме</string>
    <string name="profile_setting_exit">Выйти</string>
    <string name="profile_setting_enter">Войти</string>
    <string name="base_image_path_w200">https://image.tmdb.org/t/p/w200/</string>
    <string name="base_image_path_w400">https://image.tmdb.org/t/p/w500/</string>

</resources>