<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movie_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:paddingStart="@dimen/indent_20dp"
        android:paddingEnd="0dp">

        <View
            android:id="@+id/movie_details_slide_icon"
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/indent_10dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_details_genre"
            style="@style/text_roboto_400_style.10sp"
            android:layout_marginTop="@dimen/indent_36dp"
            android:background="@drawable/text_view_genre_background"
            android:gravity="center"
            android:paddingStart="@dimen/indent_8dp"
            android:paddingEnd="@dimen/indent_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/text_genre_fighters" />

        <TextView
            android:id="@+id/movie_details_date_of_release"
            style="@style/text_roboto_400_style.14sp"
            android:layout_marginStart="@dimen/indent_14dp"
            app:layout_constraintBottom_toBottomOf="@id/movie_details_genre"
            app:layout_constraintStart_toEndOf="@id/movie_details_genre"
            app:layout_constraintTop_toTopOf="@id/movie_details_genre"
            tools:text="@string/text_date_22_04_2021" />

        <TextView
            android:id="@+id/movie_details_title"
            style="@style/text_roboto_500_style.20sp"
            android:layout_marginTop="@dimen/indent_14dp"
            android:layout_marginEnd="@dimen/indent_8dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/movie_details_age_limit"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_details_genre"
            tools:text="@string/text_title_wrath_of_man" />

        <TextView
            android:id="@+id/movie_details_age_limit"
            style="@style/text_roboto_400_style.14sp"
            android:layout_marginTop="@dimen/indent_42dp"
            android:layout_marginEnd="@dimen/indent_20dp"
            android:background="@drawable/text_view_circle_border"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/text_age_limit_18" />

        <RatingBar
            android:id="@+id/movie_details_rating_bar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_8dp"
            android:layout_marginEnd="4dp"
            android:isIndicator="true"
            android:numStars="5"
            android:progressBackgroundTint="@android:color/black"
            android:progressTint="@android:color/black"
            android:rating="4"
            android:secondaryProgressTint="@android:color/black"
            android:stepSize="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_details_title" />

        <TextView
            android:id="@+id/movie_details_description"
            style="@style/text_roboto_400_style.14sp"
            android:layout_marginTop="@dimen/indent_20dp"
            android:layout_marginEnd="@dimen/indent_20dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_details_rating_bar"
            tools:text="@string/text_description_wrath_of_man" />

        <TextView
            android:id="@+id/movie_details_actors_text"
            style="@style/text_roboto_500_style.16sp"
            android:layout_marginTop="@dimen/indent_36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_details_description"
            tools:text="@string/text_actors" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_details_actors_text">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/indent_42dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/first"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/statham"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/text_roboto_700_style.12sp"
                    android:layout_marginTop="@dimen/indent_12dp"
                    android:text="@string/text_actor_statham"
                    app:layout_constraintStart_toStartOf="@id/first"
                    app:layout_constraintTop_toBottomOf="@id/first" />

                <ImageView
                    android:id="@+id/second"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="@dimen/indent_10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mccallany"
                    app:layout_constraintStart_toEndOf="@id/first"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/text_roboto_700_style.12sp"
                    android:layout_marginTop="@dimen/indent_12dp"
                    android:text="@string/text_actor_mccallany"
                    app:layout_constraintStart_toStartOf="@id/second"
                    app:layout_constraintTop_toBottomOf="@id/second" />

                <ImageView
                    android:id="@+id/third"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="@dimen/indent_10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/statham"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/second"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/text_roboto_700_style.12sp"
                    android:layout_marginTop="@dimen/indent_12dp"
                    android:text="@string/text_actor_statham"
                    app:layout_constraintStart_toStartOf="@id/third"
                    app:layout_constraintTop_toBottomOf="@id/third" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>